# argusSpring

./: .gitignore  README.md  pyproject.toml
argus/: __init__.py  __main__.py  cli.py  config.py  github.py  llm.py  main.py  models.py  orchestrator.py  patching.py  project_rules.py  rag.py  tooling.py  webhook.py
argus/agents/: __init__.py  base.py  cicd.py  conversation.py  fix.py  post_filter.py  review.py
argus/observability/: __init__.py  cost.py  trace.py
argus/repl/: __init__.py  commands.py  context.py  renderer.py  session.py
argus/state/: __init__.py  review_state.py
argus/tools/: __init__.py  diff_parser.py  log_parser.py
docs/: README.md  architecture.md  cicd-agent.md  cli-and-config.md  conversation-agent.md  development-guide.md  fix-agent.md  metrics.md  orchestrator-agent.md  provider-config.md  rag-pipeline.md  review-agent.md  tools-spec.md  user-experience.md
springVersion/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pom.xml  verify-llm.sh
springVersion/.github/workflows/: ci.yml
springVersion/docs/: README.md  benchmark-results.md  project-status-summary.md  rag-evaluation-dataset.csv  rag-evaluation-results.md  resume-argus-project.md  resume-vs-reality-analysis.md  roadmap.md
springVersion/docs/aiops-refactor/: 01-spec-review.md  README.md  (+4 more)
springVersion/scripts/: benchmark-review.sh  evaluate-rag.sh
tests/: test_base_agent.py  test_cicd_agent.py  test_cli.py  test_conversation_agent.py  test_diff_parser.py  test_fix_agent.py  test_log_parser.py  test_orchestrator.py  test_review_agent.py  test_review_state.py
(+100 files in other folders)
